Adding some config, docs and functions

--- a/vpn-manage.conf
+++ b/vpn-manage.conf
@@ -2,7 +2,7 @@
 
 # Change this to what you need it to be
 UNCONFIGURED=1 # Comment out this line when you are done!
-MYENV=xload # This is the name of your environment
+MYENV=InsertNameHere # This is the name of your environment/servername
 MYREMOTE=123.123.123.123 # This should be the remote IP address of the server
 
 # These should remain constant
